package com.rafael.todolist.entity;

public enum TaskState {
    TO_DO,
    IN_PROGRESS,
    DONE
}