@startuml

class Task {
    - id : Long
    - name : String
    - description : String
    - date : LocalDateTime
    - state : TASK_STATE
}

class Category {
    - id : Long
    - name : String
}

enum TASK_STATE {
    TO_DO
    IN_PROGRESS
    DONE
}

' Relation
Task "0..*" -- "1" User
Task "0..*" -- "0..1" Category

' External class managed by framework
class User {
    - id : Long
    - username : String
    - password : String
}

@enduml